Refactored core protocol pack java package to com.slytechs.jnet.protocol.core