@@ -1,155 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.slytechs.jnet.protocol</groupId>
-	<artifactId>protocol-pack-core</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
-	<name>Protocol Pack Core</name>
-	<description>Core protocol pack, consisting of common protocols and protocol primitives</description>
-	<url>https://www.slytechs.com</url>
-	<properties>
-		<jdk.version>21</jdk.version>
-		<java.encoding>UTF-8</java.encoding>
-		<project.build.sourceEncoding>${java.encoding}</project.build.sourceEncoding>
-		<maven.compiler.source>${jdk.version}</maven.compiler.source>
-		<maven.compiler.target>${jdk.version}</maven.compiler.target>
-	</properties>
-
-	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resource</directory>
-				<excludes>
-					<exclude>**/*.java</exclude>
-				</excludes>
-			</resource>
-		</resources>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.11.0</version>
-					<configuration>
-						<source>${jdk.version}</source>
-						<target>${jdk.version}</target>
-						<release>${jdk.version}</release>
-						<compilerArgs>
-							<arg>--enable-preview</arg>
-						</compilerArgs>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>3.5.0</version>
-					<configuration>
-						<sourcepath>${basedir}/src/main/java</sourcepath>
-						<show>public</show>
-						<additionalJOption>--enable-preview</additionalJOption>
-						<excludePackageNames>
-							*.internal:*.internal.*</excludePackageNames>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M7</version>
-					<configuration>
-						<skipTests>true</skipTests>
-						<trimStackTrace>true</trimStackTrace>
-						<encoding>${java.encoding}</encoding>
-						<skipAfterFailureCount>1</skipAfterFailureCount>
-						<reuseForks>true</reuseForks>
-						<groups>${groups}</groups>
-						<excludedGroups>${excludeGroups}</excludedGroups>
-					</configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-site-plugin</artifactId>
-					<version>3.7.1</version>
-				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-project-info-reports-plugin</artifactId>
-					<version>3.0.0</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
-
-	<developers>
-		<developer>
-			<id>markb</id>
-			<name>Mark Bednarczyk</name>
-			<email>mark@slytechs.com</email>
-			<organization>Sly Technlogies</organization>
-			<organizationUrl>http://slytechs.com</organizationUrl>
-		</developer>
-	</developers>
-
-	<dependencies>
-		<!--
-		https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
-		<dependency>
-			<groupId>org.apache.maven.plugins</groupId>
-			<artifactId>maven-compiler-plugin</artifactId>
-			<version>3.10.1</version>
-		</dependency>
-		<!--
-		https://mvnrepository.com/artifact/org.junit.platform/junit-platform-suite-api -->
-		<dependency>
-			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-suite-api</artifactId>
-			<version>1.9.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-engine</artifactId>
-			<version>5.9.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>javax.json</groupId>
-			<artifactId>javax.json-api</artifactId>
-			<version>1.1.4</version>
-		</dependency>
-	</dependencies>
-
-	<licenses>
-		<license>
-			<name>Sly Technologies Free License</name>
-			<url>http://www.slytechs.com/free-license-text</url>
-		</license>
-	</licenses>
-
-	<organization>
-		<name>Sly Technologies Inc</name>
-		<url>http://slytechs.com</url>
-	</organization>
-
-	<issueManagement>
-		<system>Github Issue Tracking</system>
-		<url>https://github.com/slytechs-repos/core-protocols/issues</url>
-	</issueManagement>
-
-	<scm>
-		<connection>
-			scm:git:git://github.com/slytechs-repos/core-protocols.git</connection>
-		<developerConnection>
-			scm:git:ssh:git://github.com/slytechs-repos/core-protocols.git</developerConnection>
-		<url>https://github.com/slytechs-repos/core-protocols</url>
-	</scm>
-
-	<distributionManagement>
-		<!-- mvn clean site site:stage scm-publish:publish-scm -->
-		<site>
-			<id>github</id>
-			<url>scm:git:git@github.com:slytechs-repos/core-protocols.git</url>
-		</site>
-	</distributionManagement>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.slytechs.jnet.protocol</groupId>
+    <artifactId>protocol-pack-sdk-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
+  <artifactId>protocol-pack-core</artifactId>
+  <name>Protocol Pack Core</name>
+  <description>Core protocol pack, consisting of common protocols and protocol primitives</description>
 </project>
